--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
       <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
     {% endif %}
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
-    <a href="https://clustrmaps.com/site/1bj2a"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=lbYqVaD9Z130hdQBUe-_Np9AqcKfVcIeoK5DyNSD5Rs&cl=ffffff" /></a>
+    <a href='https://clustrmaps.com/site/1bj2a'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=200&t=n&d=lbYqVaD9Z130hdQBUe-_Np9AqcKfVcIeoK5DyNSD5Rs'/></a>
   </ul>
 </div>
 
